--- a/MyWebsite/Views/Home/About.cshtml
+++ b/MyWebsite/Views/Home/About.cshtml
@@ -27,8 +27,10 @@
             <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.4s">
                 <div class="section-title text-start mb-5">
                     <h4 class="sub-title pe-3 mb-0">About Us</h4>
-                    <h1 class="display-3 mb-4">@aboutUs.Title</h1>
-                    <p class="mb-4">@aboutUs.Body</p>
+                    <h1 class="display-3 mb-4">@Html.Raw(aboutUs.Title)</h1>
+                    <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(aboutUs.Header)</p>
+                    <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(aboutUs.Body)</p>
+                    <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(aboutUs.Footer)</p>
                     <div class="mb-4">
                         @foreach (var item in listAbout)
                         {
