--- a/MyWebsite/Views/Home/Service.cshtml
+++ b/MyWebsite/Views/Home/Service.cshtml
@@ -23,13 +23,13 @@
                     
                     <div class="mb-4">
                         <h3 class="mb-4"><i class="fa fa-check text-primary me-2"></i> @ourService.Title</h3>
-                        <p class="mb-3">
+                        <p class="mb-3" style="text-align: justify;text-justify: inter-word;">
                             @Html.Raw(ourService.Header)
                         </p>
-                        <p class="mb-3">
+                        <p class="mb-3" style="text-align: justify;text-justify: inter-word;">
                             @Html.Raw(ourService.Body)
                         </p>
-                        <p class="mb-3">
+                        <p class="mb-3" style="text-align: justify;text-justify: inter-word;">
                             @Html.Raw(ourService.Footer)
                         </p>
                     </div>
