--- a/MyWebsite/Views/Home/Services.cshtml
+++ b/MyWebsite/Views/Home/Services.cshtml
@@ -18,34 +18,30 @@
                 <h4 class="sub-title px-3 mb-0">What We Do</h4>
             </div>
             <h1 class="display-3 mb-4">@ourService.Title</h1>
-            <p class="mb-0">
-                @ourService.Body
-            </p>
+            
+            <p class="mb-1">@Html.Raw(ourService.Body)</p>
+            <p class="mb-1">@Html.Raw(ourService.Footer)</p>
         </div>
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listService.Count; i++)
             {
-                if (i < 8)
-                {
-                    string header = string.IsNullOrEmpty(listService[i].Header) == true ? "" : Convert.ToString(listService[i].Header);
-                    header = header.Length > 100 ? header.ToString().Substring(0, 100) : header.ToString().Substring(0, header.Length);
-                    var delay = i * 0.1;
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
-                        <div class="service-item rounded">
-                            <div class="service-img rounded-top">
-                                <img src="@listService[i].FilePath" class="img-fluid rounded-top w-100" alt="">
-                            </div>
-                            <div class="service-content rounded-bottom bg-light p-4">
-                                <div class="service-content-inner">
-                                    <h5 class="mb-4">@Html.Raw(listService[i].Title)</h5>
-                                    <p class="mb-4">@Html.Raw(header)</p>
-                                    <a href="/Home/Service/@listService[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
-                                </div>
+                string header = string.IsNullOrEmpty(listService[i].Header) == true ? "" : Convert.ToString(listService[i].Header);
+                header = header.Length > 100 ? header.ToString().Substring(0, 100) : header.ToString().Substring(0, header.Length);
+                var delay = i * 0.1;
+                <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
+                    <div class="service-item rounded">
+                        <div class="service-img rounded-top">
+                            <img src="@listService[i].FilePath" class="img-fluid rounded-top w-100" alt="">
+                        </div>
+                        <div class="service-content rounded-bottom bg-light p-4">
+                            <div class="service-content-inner">
+                                <h5 class="mb-4">@Html.Raw(listService[i].Title)</h5>
+                                <p class="mb-4">@Html.Raw(header)</p>
+                                <a href="/Home/Service/@listService[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                             </div>
                         </div>
                     </div>
-                }
-
+                </div>
             }
 
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
