--- a/MyWebsite/Views/Pages/Details.cshtml
+++ b/MyWebsite/Views/Pages/Details.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_LayoutReview.cshtml";
 
     var oPage = Model == null ? new PageVM() : Model.First();
+    int serial = 0;
 }
 
 <div class="container-fluid">
@@ -15,6 +16,7 @@
     <div class="table-responsive">
         <table class="table table-bordered table-responsive">
             <tr>
+                <th>#</th>
                 <th>Title</th>
                 <th>Header</th>
                 <th>Body</th>
@@ -26,7 +28,9 @@
             && x.SlugPageContent != "copy_right"
             && x.SlugPageContent != "designed_by"))
             {
+                serial += 1;
                 <tr>
+                    <td>@serial</td>
                     <td>
                         <a href="/PageContents/Edit/@item.PageContentId">@item.Title</a>
                     </td>
@@ -50,6 +54,7 @@
     var aboutImg = oPage.ListPageContent.Where(x => x.SlugPageContent == "about_img").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oPage.ListPageContent.Where(x => x.SlugPageContent == "about_img").First();
     var listAbout = oPage.ListPageContent.Where(x => x.SlugPageContent == "abouts").ToList();
+
     <!-- About Start -->
     <div class="container-fluid about bg-light py-5">
         <div class="container py-5">
@@ -67,9 +72,9 @@
                     <div class="section-title text-start mb-5">
                         <h4 class="sub-title pe-3 mb-0">About Us</h4>
                         <h1 class="display-3 mb-4">@aboutUs.Title</h1>
-                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@aboutUs.Header</p>
-                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@aboutUs.Body</p>
-                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@aboutUs.Footer</p>
+                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(aboutUs.Header)</p>
+                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(aboutUs.Body)</p>
+                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(aboutUs.Footer)</p>
                         <div class="mb-4">
                             @foreach (var item in listAbout)
                             {
@@ -99,7 +104,8 @@
                     <div class="section-title text-start">
                         <h4 class="sub-title pe-3 mb-0">@appointment.Title</h4>
                         <h1 class="display-4 mb-4">@appointment.Header</h1>
-                        <p class="mb-4">@appointment.Body</p>
+                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(appointment.Body)</p>
+                        <p class="mb-4" style="text-align: justify;text-justify: inter-word;">@Html.Raw(appointment.Footer)</p>
                         @* <div class="row g-4">
                             <div class="col-sm-8">
                                 <div class="video h-100">
@@ -200,9 +206,9 @@
                         <div class="carousel-caption-content p-3">
                             <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">@item.Title</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">Where Beauty Meets Radiance</h1>
-                            <p class="mb-5 fs-5">
-                                @item.Body
-                            </p>
+                            <p class="mb-5 fs-5">@Html.Raw(item.Header)</p>
+                            <p class="mb-5 fs-5">@Html.Raw(item.Body)</p>
+                            <p class="mb-5 fs-5">@Html.Raw(item.Footer)</p>
                             <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="javascript:void(0)" name="appointment">Book Appointment</a>
                         </div>
                     </div>
@@ -222,6 +228,7 @@
                         oService.ListPageContent.Where(x => x.SlugPageContent == "our_services").First();
     var listService = oService.ListPageContent.Where(x => x.SlugPageContent == "services").ToList();
 
+    <a href="/PageContents/Create?Slug=services&SlugPageContent=services" style="padding-left:20px">New services</a>
     <!-- Services Start -->
     <div class="container-fluid service py-5">
         <div class="container py-5">
@@ -230,9 +237,8 @@
                     <h4 class="sub-title px-3 mb-0">What We Do</h4>
                 </div>
                 <h1 class="display-3 mb-4">@ourService.Title</h1>
-                <p class="mb-0">
-                    @ourService.Body
-                </p>
+                <p class="mb-1">@Html.Raw(ourService.Body)</p>
+                <p class="mb-1">@Html.Raw(ourService.Footer)</p>
             </div>
             <div class="row g-4 justify-content-center">
                 @for (var i = 0; i < listService.Count; i++)
@@ -277,6 +283,7 @@
                         oOurTeam.ListPageContent.Where(x => x.SlugPageContent == "our_team").First();
     var listOurTeam = oOurTeam.ListPageContent.Where(x => x.SlugPageContent == "our_teams").ToList();
 
+    <a href="/PageContents/Create?Slug=our_team&SlugPageContent=our_teams" style="padding-left:20px">New Team Member</a>
     <!-- Team Start -->
     <div class="container-fluid team py-5">
         <div class="container py-5">
@@ -285,7 +292,9 @@
                     <h4 class="sub-title px-3 mb-0">Meet our team</h4>
                 </div>
                 <h1 class="display-3 mb-4">@ourTeam.Title</h1>
-                <p class="mb-0">@ourTeam.Body</p>
+                <p class="mb-1">@Html.Raw(ourTeam.Header)</p>
+                <p class="mb-1">@Html.Raw(ourTeam.Body)</p>
+                <p class="mb-1">@Html.Raw(ourTeam.Footer)</p>
             </div>
             <div class="row g-4 justify-content-center">
                 @for (var i = 0; i < listOurTeam.Count; i++)
@@ -306,7 +315,7 @@
                                 </div>
                                 <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
                                     <h5>@listOurTeam[i].Title</h5>
-                                    <p class="mb-0">@listOurTeam[i].Body</p>
+                                    <p class="mb-0">@listOurTeam[i].Header</p>
                                 </div>
                             </div>
                         </div>
@@ -326,6 +335,8 @@
     var testimonial = oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonial").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonial").First();
     var listTestimonial = oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonials").ToList();
+
+    <a href="/PageContents/Create?Slug=testimonial&SlugPageContent=testimonials" style="padding-left:20px">New Restimonial</a>
     <!-- Testimonial Start -->
     <div class="container-fluid testimonial py-5 wow zoomInDown" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -334,6 +345,9 @@
                     <h4 class="sub-title text-white px-3 mb-0">Testimonial</h4>
                 </div>
                 <h1 class="display-3 mb-4">@testimonial.Title</h1>
+                <p class="mb-1">@Html.Raw(testimonial.Header)</p>
+                <p class="mb-1">@Html.Raw(testimonial.Body)</p>
+                <p class="mb-1">@Html.Raw(testimonial.Footer)</p>
             </div>
             <div class="testimonial-carousel owl-carousel">
                 @foreach (var item in listTestimonial.Take(3))
@@ -373,6 +387,8 @@
     var ourBlog = oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blog").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blog").First();
     var listOurBlog = oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blogs").ToList();
+
+    <a href="/PageContents/Create?Slug=our_blog&SlugPageContent=our_blogs" style="padding-left:20px">New Blog</a>
     <!-- Blog Start -->
     <div class="container-fluid blog py-5">
         <div class="container py-5">
@@ -381,7 +397,9 @@
                     <h4 class="sub-title px-3 mb-0">Our Blog</h4>
                 </div>
                 <h1 class="display-3 mb-4">@ourBlog.Title</h1>
-                <p class="mb-0">@ourBlog.Body</p>
+                <p class="mb-0">@Html.Raw(ourBlog.Header)</p>
+                <p class="mb-0">@Html.Raw(ourBlog.Body)</p>
+                <p class="mb-0">@Html.Raw(ourBlog.Footer)</p>
             </div>
             <div class="row g-4 justify-content-center">
                 @for (var i = 0; i < listOurBlog.Count; i++)
@@ -580,7 +598,9 @@
                     <div class="section-title text-start mb-5">
                         <h4 class="sub-title pe-3 mb-0">Privacy Policy</h4>
                         <h1 class="display-3 mb-4">@privacyPolicy.Title</h1>
-                        <p class="mb-4">@privacyPolicy.Body</p>
+                        <p class="mb-2" style="text-align: justify;text-justify: inter-word;">@Html.Raw(privacyPolicy.Header)</p>
+                        <p class="mb-2" style="text-align: justify;text-justify: inter-word;">@Html.Raw(privacyPolicy.Body)</p>
+                        <p class="mb-2" style="text-align: justify;text-justify: inter-word;">@Html.Raw(privacyPolicy.Footer)</p>
                         <div class="mb-4">
                             @foreach (var item in listPrivacyPolicy)
                             {
@@ -612,7 +632,9 @@
                     <div class="section-title text-start mb-5">
                         <h4 class="sub-title pe-3 mb-0">Terms & Conditions</h4>
                         <h1 class="display-3 mb-4">@terms.Title</h1>
-                        <p class="mb-4">@terms.Body</p>
+                        <p class="mb-1">@terms.Header</p>
+                        <p class="mb-1">@terms.Body</p>
+                        <p class="mb-1">@terms.Footer</p>
                         <div class="mb-4">
                             @foreach (var item in listTerms)
                             {
