--- a/MyWebsite/Views/Home/About.cshtml
+++ b/MyWebsite/Views/Home/About.cshtml
@@ -21,7 +21,7 @@
                     <div class="about-img-inner">
                         <img src="@aboutImg.FilePath" class="img-fluid rounded-circle w-100 h-100" alt="Image">
                     </div>
-                    <div class="about-experience">@aboutImg.Title</div>
+                    <div class="about-experience">@Html.Raw(aboutImg.Title)</div>
                 </div>
             </div>
             <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.4s">
@@ -34,7 +34,7 @@
                     <div class="mb-4">
                         @foreach (var item in listAbout)
                         {
-                            <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> @item.Title</p>
+                            <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> @Html.Raw(item.Title)</p>
                         }
                     </div>
                     <a href="javascript:void(0)" class="btn btn-primary rounded-pill text-white py-3 px-5">Discover More</a>
