--- a/MyWebsite/Views/Home/Contact.cshtml
+++ b/MyWebsite/Views/Home/Contact.cshtml
@@ -56,18 +56,14 @@
     <div class="container py-5">
         <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="sub-style mb-4">
-                <h4 class="sub-title text-white px-3 mb-0">@contact.Title</h4>
+                <h4 class="sub-title text-white px-3 mb-0">@Html.Raw(contact.Title)</h4>
             </div>
-            <p class="mb-0 text-black-50">
-                @contact.Body
-            </p>
+            <p class="mb-0 text-black-50">@Html.Raw(contact.Body)</p>
         </div>
         <div class="row g-4 align-items-center">
             <div class="col-lg-5 col-xl-5 contact-form wow fadeInLeft" data-wow-delay="0.1s">
-                <h2 class="display-5 text-white mb-2">@contact.Header</h2>
-                <p class="mb-4 text-white">
-                    @contact.Footer
-                </p>
+                <h2 class="display-5 text-white mb-2">@Html.Raw(contact.Header)</h2>
+                <p class="mb-4 text-white">@Html.Raw(contact.Footer)</p>
                 <form asp-controller="Home" asp-action="Contact" method="post">
                     <div class="row g-3">
                         <div class="col-lg-12 col-xl-12">
