--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -48,9 +48,9 @@
                     <div class="carousel-caption-content p-3">
                         <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">@Html.Raw(item.Title)</h5>
                         <h1 class="display-1 text-capitalize text-white mb-4">Where Beauty Meets Radiance</h1>
-                        <p class="mb-5 fs-5">
-                            @Html.Raw(item.Body)
-                        </p>
+                        <p class="mb-5 fs-5">@Html.Raw(item.Header)</p>
+                        <p class="mb-5 fs-5">@Html.Raw(item.Body)</p>
+                        <p class="mb-5 fs-5">@Html.Raw(item.Footer)</p>
                         <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="javascript:void(0)" name="appointment">Book Appointment</a>
                     </div>
                 </div>
@@ -69,9 +69,8 @@
                 <h4 class="sub-title px-3 mb-0">What We Do</h4>
             </div>
             <h1 class="display-3 mb-4">@Html.Raw(ourService.Title)</h1>
-            <p class="mb-0">
-                @Html.Raw(ourService.Body)
-            </p>
+            <p class="mb-0">@Html.Raw(ourService.Body)</p>
+            <p class="mb-0">@Html.Raw(ourService.Footer)</p>
         </div>
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listService.Count; i++)
@@ -117,7 +116,7 @@
                     <div class="about-img-inner">
                         <img src="@aboutImg.FilePath" class="img-fluid rounded-circle w-100 h-100" alt="Image">
                     </div>
-                    <div class="about-experience">@aboutImg.Title</div>
+                    <div class="about-experience">@Html.Raw(aboutImg.Title)</div>
                 </div>
             </div>
             <div class="col-lg-7 wow fadeInRight" data-wow-delay="0.4s">
@@ -149,12 +148,14 @@
                 <h4 class="sub-title px-3 mb-0">Meet our team</h4>
             </div>
             <h1 class="display-3 mb-4">@ourTeam.Title</h1>
-            <p class="mb-0">@ourTeam.Body</p>
+            <p class="mb-0">@Html.Raw(ourTeam.Header)</p>
+            <p class="mb-0">@Html.Raw(ourTeam.Body)</p>
+            <p class="mb-0">@Html.Raw(ourTeam.Footer)</p>
         </div>
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listOurTeam.Count; i++)
             {
-                if(i < 4)
+                if(i < 8)
                 {
                     var delay = i * 0.1;
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
@@ -164,7 +165,7 @@
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
                                 <h5>@Html.Raw(listOurTeam[i].Title)</h5>
-                                <p class="mb-0">@Html.Raw(listOurTeam[i].Body)</p>
+                                <p class="mb-0">@Html.Raw(listOurTeam[i].Header)</p>
                             </div>
                         </div>
                     </div>
@@ -183,11 +184,17 @@
             <div class="sub-style">
                 <h4 class="sub-title text-white px-3 mb-0">Testimonial</h4>
             </div>
-            <h1 class="display-3 mb-4">@testimonial.Title</h1>
+            <h1 class="display-3 mb-4">@Html.Raw(@testimonial.Title)</h1>
+            <p class="mb-0">@Html.Raw(testimonial.Header)</p>
+            <p class="mb-0">@Html.Raw(testimonial.Body)</p>
+            <p class="mb-0">@Html.Raw(testimonial.Footer)</p>
         </div>
         <div class="testimonial-carousel owl-carousel">
-            @foreach (var item in listTestimonial.Take(3))
+            @foreach (var item in listTestimonial.Take(9))
             {
+                int start = 0;
+                bool isInt = int.TryParse(item.Footer, out start);
+                start = isInt == true ? start : 0;
                 <div class="testimonial-item">
                     <div class="testimonial-inner p-5">
                         <div class="testimonial-inner-img mb-4">
@@ -200,7 +207,7 @@
                             <h5 class="mb-2">@item.Title</h5>
                             <p class="mb-2 text-white-50">@item.Header</p>
                             <div class="d-flex justify-content-center">
-                                @for (var i = 0; i < int.Parse(item.Footer); i++)
+                                @for (var i = 0; i < start; i++)
                                 {
                                     <i class="fas fa-star text-secondary"></i>
                                 }
@@ -223,12 +230,14 @@
                 <h4 class="sub-title px-3 mb-0">Our Blog</h4>
             </div>
             <h1 class="display-3 mb-4">@ourBlog.Title</h1>
-            <p class="mb-0">@ourBlog.Body</p>
+            <p class="mb-0">@Html.Raw(ourBlog.Header)</p>
+            <p class="mb-0">@Html.Raw(ourBlog.Body)</p>
+            <p class="mb-0">@Html.Raw(ourBlog.Footer)</p>
         </div>
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listOurBlog.Count; i++)
             {
-                if (i < 3)
+                if (i < 9)
                 {
                     var delay = i * 0.1;
                     <div class="col-md-6 col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="@delay.ToString()s">
