--- a/MyWebsite/Views/Home/OurBlogs.cshtml
+++ b/MyWebsite/Views/Home/OurBlogs.cshtml
@@ -17,31 +17,30 @@
                 <h4 class="sub-title px-3 mb-0">Our Blogs</h4>
             </div>
             <h1 class="display-3 mb-4">@ourBlog.Title</h1>
-            <p class="mb-0">@ourBlog.Body</p>
+            <p class="mb-0">@Html.Raw(ourBlog.Header)</p>
+            <p class="mb-0">@Html.Raw(ourBlog.Body)</p>
+            <p class="mb-0">@Html.Raw(ourBlog.Footer)</p>
         </div>
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listOurBlog.Count; i++)
             {
-                if (i < 3)
-                {
-                    var delay = i * 0.1;
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="@delay.ToString()s">
-                        <div class="blog-item rounded">
-                            <div class="blog-img">
-                                <img src="@listOurBlog[i].FilePath" class="img-fluid w-100" alt="Image">
+                var delay = i * 0.1;
+                <div class="col-md-6 col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="@delay.ToString()s">
+                    <div class="blog-item rounded">
+                        <div class="blog-img">
+                            <img src="@listOurBlog[i].FilePath" class="img-fluid w-100" alt="Image">
+                        </div>
+                        <div class="blog-centent p-4">
+                            <div class="d-flex justify-content-between mb-4">
+                                <p class="mb-0 text-muted"><i class="fa fa-calendar-alt text-primary"></i> @Convert.ToDateTime(listOurBlog[i].UploadedAt).ToString("dd MMM yyyy")</p>
+                                @* <a href="javascript:void(0)" class="text-muted"><span class="fa fa-comments text-primary"></span> Comment(s)</a> *@
                             </div>
-                            <div class="blog-centent p-4">
-                                <div class="d-flex justify-content-between mb-4">
-                                    <p class="mb-0 text-muted"><i class="fa fa-calendar-alt text-primary"></i> @Convert.ToDateTime(listOurBlog[i].UploadedAt).ToString("dd MMM yyyy")</p>
-                                    @* <a href="javascript:void(0)" class="text-muted"><span class="fa fa-comments text-primary"></span> Comment(s)</a> *@
-                                </div>
-                                <a href="javascript:void(0)" class="h4">@listOurBlog[i].Title</a>
-                                <p class="my-4">@listOurBlog[i].Header</p>
-                                <a href="/Home/OurBlog/@listOurBlog[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-1">Read More</a>
-                            </div>
+                            <a href="javascript:void(0)" class="h4">@listOurBlog[i].Title</a>
+                            <p class="my-4">@listOurBlog[i].Header</p>
+                            <a href="/Home/OurBlog/@listOurBlog[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-1">Read More</a>
                         </div>
                     </div>
-                }
+                </div>
             }
 
         </div>
