--- a/MyWebsite/Views/Home/OurTeams.cshtml
+++ b/MyWebsite/Views/Home/OurTeams.cshtml
@@ -17,7 +17,9 @@
                 <h4 class="sub-title px-3 mb-0">Meet our team</h4>
             </div>
             <h1 class="display-3 mb-4">@ourTeam.Title</h1>
-            <p class="mb-0">@ourTeam.Body</p>
+            <p class="mb-0">@Html.Raw(ourTeam.Header)</p>
+            <p class="mb-0">@Html.Raw(ourTeam.Body)</p>
+            <p class="mb-0">@Html.Raw(ourTeam.Footer)</p>
         </div>
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listOurTeam.Count; i++)
@@ -32,7 +34,7 @@
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
                                 <h5>@listOurTeam[i].Title</h5>
-                                <p class="mb-0">@listOurTeam[i].Body</p>
+                                <p class="mb-0">@listOurTeam[i].Header</p>
                             </div>
                         </div>
                     </div>
@@ -40,7 +42,55 @@
 
             }
         </div>
+
+
     </div>
 </div>
 <!-- Team End -->
+
+<!-- Services Start -->
+@* <div class="container-fluid service bg-light py-5">
+    <div class="container py-5">
+        <div class="section-title mb-5 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="sub-style">
+                <h4 class="sub-title px-3 mb-0">Meet Our Team</h4>
+            </div>
+            <h1 class="display-3 mb-4">@ourTeam.Title</h1>
+            <p class="mb-0">@Html.Raw(@ourTeam.Header)</p>
+            <p class="mb-0">@Html.Raw(@ourTeam.Body)</p>
+            <p class="mb-0">@Html.Raw(@ourTeam.Footer)</p>
+        </div>
+        <div class="row g-4 justify-content-center">
+            @for (var i = 0; i < listOurTeam.Count; i++)
+            {
+                if (i < 8)
+                {
+                    string header = string.IsNullOrEmpty(listOurTeam[i].Header) == true ? "" : Convert.ToString(listOurTeam[i].Header);
+                    header = header.Length > 100 ? header.ToString().Substring(0, 100) : header.ToString().Substring(0, header.Length);
+                    var delay = i * 0.1;
+                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
+                        <div class="service-item rounded">
+                            <div class="service-img rounded-top">
+                                <img src="@listOurTeam[i].FilePath" class="img-fluid rounded-top w-100" alt="">
+                            </div>
+                            <div class="service-content rounded-bottom bg-light p-4">
+                                <div class="service-content-inner">
+                                    <h5 class="mb-4">@Html.Raw(listOurTeam[i].Title)</h5>
+                                    <p class="mb-4">@Html.Raw(header)</p>
+                                    <a href="/Home/Service/@listOurTeam[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+
+            }
+
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
+                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="javascript:void(0)">Services More</a>
+            </div>
+        </div>
+    </div>
+</div>
+ *@<!-- Services End -->
 
