--- a/MyWebsite/Views/Home/Privacy.cshtml
+++ b/MyWebsite/Views/Home/Privacy.cshtml
@@ -15,8 +15,10 @@
             <div class="col-lg-12 wow fadeInRight" data-wow-delay="0.4s">
                 <div class="section-title text-start mb-5">
                     <h4 class="sub-title pe-3 mb-0">Privacy Policy</h4>
-                    <h1 class="display-3 mb-4">@privacyPolicy.Title</h1>
-                    <p class="mb-4">@privacyPolicy.Body</p>
+                    <h1 class="display-3 mb-2">@privacyPolicy.Title</h1>
+                    <p class="mb-2" style="text-align: justify;text-justify: inter-word;">@Html.Raw(privacyPolicy.Header)</p>
+                    <p class="mb-2" style="text-align: justify;text-justify: inter-word;">@Html.Raw(privacyPolicy.Body)</p>
+                    <p class="mb-2" style="text-align: justify;text-justify: inter-word;">@Html.Raw(privacyPolicy.Footer)</p>
                     <div class="mb-4">
                         @foreach (var item in listPrivacyPolicy)
                         {
