--- a/MyWebsite/Views/Home/Terms.cshtml
+++ b/MyWebsite/Views/Home/Terms.cshtml
@@ -17,7 +17,9 @@
                 <div class="section-title text-start mb-5">
                     <h4 class="sub-title pe-3 mb-0">Terms & Conditions</h4>
                     <h1 class="display-3 mb-4">@terms.Title</h1>
-                    <p class="mb-4">@terms.Body</p>
+                    <p class="mb-1">@terms.Header</p>
+                    <p class="mb-1">@terms.Body</p>
+                    <p class="mb-1">@terms.Footer</p>
                     <div class="mb-4">
                         @foreach (var item in listTerms)
                         {
