--- a/MyWebsite/Views/PageContents/Create.cshtml
+++ b/MyWebsite/Views/PageContents/Create.cshtml
@@ -1,16 +1,16 @@
 ﻿@model MyWebsite.Models.PageContentVM
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h4>Edit of</h4>
+<h4>Create of</h4>
 <h1 class="text-danger">@Model.SlugPage CONTENT</h1>
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Edit" asp-controller="PageContents" method="post" enctype="multipart/form-data">
+        <form asp-action="Create" asp-controller="PageContents" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PageContentId" />
             <div class="form-group">
@@ -63,7 +63,7 @@
                 </select>
                 <span asp-validation-for="IsActive" class="text-danger"></span>
 
-                
+
             </div>
             @* <div class="form-group">
                 <label asp-for="UploadedBy" class="control-label"></label>
