--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     var oService = Model.Where(x => x.Slug == "services").FirstOrDefault() == null ? new PageVM() : Model.Where(x => x.Slug == "services").First();
     var ourService = oService.ListPageContent.Where(x => x.SlugPageContent == "our_services").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oService.ListPageContent.Where(x => x.SlugPageContent == "our_services").First();
-    var listService = oService.ListPageContent.Where(x => x.SlugPageContent == "services").ToList();
+    var listService = oService.ListPageContent.Where(x => x.SlugPageContent == "services" && Convert.ToString(x.Description).ToLower() == "home").Take(8).ToList();
 
     var oAbout = Model.Where(x => x.Slug == "about").FirstOrDefault() == null ? new PageVM() : Model.Where(x => x.Slug == "about").First();
     var aboutUs = oAbout.ListPageContent.Where(x => x.SlugPageContent == "about").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
@@ -22,17 +22,17 @@
     var oOurTeam = Model.Where(x => x.Slug == "our_team").FirstOrDefault() == null ? new PageVM() : Model.Where(x => x.Slug == "our_team").First();
     var ourTeam = oOurTeam.ListPageContent.Where(x => x.SlugPageContent == "our_team").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oOurTeam.ListPageContent.Where(x => x.SlugPageContent == "our_team").First();
-    var listOurTeam = oOurTeam.ListPageContent.Where(x => x.SlugPageContent == "our_teams").ToList();
+    var listOurTeam = oOurTeam.ListPageContent.Where(x => x.SlugPageContent == "our_teams" && Convert.ToString(x.Description).ToLower() == "home").Take(4).ToList();
 
     var oTestimonial = Model.Where(x => x.Slug == "testimonial").FirstOrDefault() == null ? new PageVM() : Model.Where(x => x.Slug == "testimonial").First();
     var testimonial = oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonial").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonial").First();
-    var listTestimonial = oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonials").ToList();
+    var listTestimonial = oTestimonial.ListPageContent.Where(x => x.SlugPageContent == "testimonials" && Convert.ToString(x.Description).ToLower() == "home").ToList();
 
     var oOurBlog = Model.Where(x => x.Slug == "our_blog").FirstOrDefault() == null ? new PageVM() : Model.Where(x => x.Slug == "our_blog").First();
     var ourBlog = oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blog").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
                         oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blog").First();
-    var listOurBlog = oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blogs").ToList();
+    var listOurBlog = oOurBlog.ListPageContent.Where(x => x.SlugPageContent == "our_blogs").OrderByDescending(y => y.UploadedAt).Take(3).ToList();
 }
 
 <!-- Navbar & Hero Start -->
@@ -75,31 +75,28 @@
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listService.Count; i++)
             {
-                if (i < 8)
-                {
-                    string header = string.IsNullOrEmpty(listService[i].Header) == true ? "" : Convert.ToString(listService[i].Header);
-                    header = header.Length > 100 ? header.ToString().Substring(0, 100) : header.ToString().Substring(0, header.Length);
-                    var delay = i * 0.1;
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
-                        <div class="service-item rounded">
-                            <div class="service-img rounded-top">
-                                <img src="@listService[i].FilePath" class="img-fluid rounded-top w-100" alt="">
-                            </div>
-                            <div class="service-content rounded-bottom bg-light p-4">
-                                <div class="service-content-inner">
-                                    <h5 class="mb-4">@Html.Raw(listService[i].Title)</h5>
-                                    <p class="mb-4">@Html.Raw(header)</p>
-                                    <a href="/Home/Service/@listService[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
-                                </div>
+                string header = string.IsNullOrEmpty(listService[i].Header) == true ? "" : Convert.ToString(listService[i].Header);
+                header = header.Length > 100 ? header.ToString().Substring(0, 100) : header.ToString().Substring(0, header.Length);
+                var delay = i * 0.1;
+                <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
+                    <div class="service-item rounded">
+                        <div class="service-img rounded-top">
+                            <img src="@listService[i].FilePath" class="img-fluid rounded-top w-100" alt="">
+                        </div>
+                        <div class="service-content rounded-bottom bg-light p-4">
+                            <div class="service-content-inner">
+                                <h5 class="mb-4">@Html.Raw(listService[i].Title)</h5>
+                                <p class="mb-4">@Html.Raw(header)</p>
+                                <a href="/Home/Service/@listService[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                             </div>
                         </div>
                     </div>
-                }
+                </div>
 
             }
 
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
-                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="javascript:void(0)">Services More</a>
+                <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="~/Home/Services">Services More</a>
             </div>
         </div>
     </div>
@@ -155,22 +152,18 @@
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listOurTeam.Count; i++)
             {
-                if(i < 8)
-                {
-                    var delay = i * 0.1;
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
-                        <div class="team-item rounded">
-                            <div class="team-img rounded-top h-100">
-                                <img src="@listOurTeam[i].FilePath" class="img-fluid rounded-top w-100" alt="">
-                            </div>
-                            <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
-                                <h5>@Html.Raw(listOurTeam[i].Title)</h5>
-                                <p class="mb-0">@Html.Raw(listOurTeam[i].Header)</p>
-                            </div>
+                var delay = i * 0.1;
+                <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="@delay.ToString()s">
+                    <div class="team-item rounded">
+                        <div class="team-img rounded-top h-100">
+                            <img src="@listOurTeam[i].FilePath" class="img-fluid rounded-top w-100" alt="">
+                        </div>
+                        <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
+                            <h5>@Html.Raw(listOurTeam[i].Title)</h5>
+                            <p class="mb-0">@Html.Raw(listOurTeam[i].Header)</p>
                         </div>
                     </div>
-                }
-
+                </div>
             }
         </div>
     </div>
@@ -190,7 +183,7 @@
             <p class="mb-0">@Html.Raw(testimonial.Footer)</p>
         </div>
         <div class="testimonial-carousel owl-carousel">
-            @foreach (var item in listTestimonial.Take(9))
+            @foreach (var item in listTestimonial.Take(3))
             {
                 int start = 0;
                 bool isInt = int.TryParse(item.Footer, out start);
@@ -237,26 +230,23 @@
         <div class="row g-4 justify-content-center">
             @for (var i = 0; i < listOurBlog.Count; i++)
             {
-                if (i < 9)
-                {
-                    var delay = i * 0.1;
-                    <div class="col-md-6 col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="@delay.ToString()s">
-                        <div class="blog-item rounded">
-                            <div class="blog-img">
-                                <img src="@listOurBlog[i].FilePath" class="img-fluid w-100" alt="Image">
+                var delay = i * 0.1;
+                <div class="col-md-6 col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="@delay.ToString()s">
+                    <div class="blog-item rounded">
+                        <div class="blog-img">
+                            <img src="@listOurBlog[i].FilePath" class="img-fluid w-100" alt="Image">
+                        </div>
+                        <div class="blog-centent p-4">
+                            <div class="d-flex justify-content-between mb-4">
+                                <p class="mb-0 text-muted"><i class="fa fa-calendar-alt text-primary"></i> @Convert.ToDateTime(listOurBlog[i].UploadedAt).ToString("dd MMM yyyy")</p>
+                                @* <a href="javascript:void(0)" class="text-muted"><span class="fa fa-comments text-primary"></span> Comment(s)</a> *@
                             </div>
-                            <div class="blog-centent p-4">
-                                <div class="d-flex justify-content-between mb-4">
-                                    <p class="mb-0 text-muted"><i class="fa fa-calendar-alt text-primary"></i> @Convert.ToDateTime(listOurBlog[i].UploadedAt).ToString("dd MMM yyyy")</p>
-                                    @* <a href="javascript:void(0)" class="text-muted"><span class="fa fa-comments text-primary"></span> Comment(s)</a> *@
-                                </div>
-                                <a href="#" class="h4">@Html.Raw(listOurBlog[i].Title)</a>
-                                <p class="my-4">@Html.Raw(listOurBlog[i].Body)</p>
-                                <a href="/Home/OurBlog/@listOurBlog[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-1">Read More</a>
-                            </div>
+                            <a href="#" class="h4">@Html.Raw(listOurBlog[i].Title)</a>
+                            <p class="my-4">@Html.Raw(listOurBlog[i].Body)</p>
+                            <a href="/Home/OurBlog/@listOurBlog[i].PageContentId" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-1">Read More</a>
                         </div>
                     </div>
-                }
+                </div>
             }
             
         </div>
